terms-web/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: terms-web
spec:
    ports:
      - port: 8080
        targetPort: 8080
    selector:
      app: terms-web
