terms-web/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
    name: terms-web
spec:
    port:
      targetPort: 8080
    tls:
      termination: edge
    to:
      kind: Service
      name: terms-web
